# simses-lite

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  dev.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
binder/: requirements.txt
docs/: about.md  contributing.md  getting-started.md  index.md
docs/api/: battery.md  converter.md  degradation.md  index.md  interpolation.md  models.md  thermal.md
docs/concepts/: battery.md  converter.md  degradation.md  thermal.md
docs/guides/: cell-models.md  converter-models.md  extending-cells.md  extending-converters.md  extending-degradation.md  extending-storage.md  installation.md  logging-and-plots.md  multi-string.md
docs/tutorials/: demo.ipynb  index.md
examples/: state_logging.py
examples/extending/: capacitor_storage.py  custom_cell.py  custom_degradation.py  custom_loss_model.py
notebooks/: demo.ipynb  pyproject.toml
simses/: interpolation.py
simses/battery/: __init__.py  battery.py  cell.py  format.py  properties.py  state.py
simses/converter/: __init__.py  converter.py
simses/degradation/: __init__.py  calendar.py  cycle_detector.py  cyclic.py  degradation.py  state.py
simses/thermal/: __init__.py  ambient.py  container.py  solar.py  thermal.py
tests/: dev.py  test_battery.py  test_cell_models.py  test_converter.py  test_converter_models.py  test_cycle_detector.py  test_degradation.py  test_degradation_models.py  test_examples.py  test_interpolation.py  test_solar.py  test_thermal.py  test_thermal_ambient.py  test_thermal_container.py
(+51 files in other folders)
